...
      <View style={styles.homeContainer}>
        <HomeCard
          text={t('home.hideWaldo')}
          onPress={toHidingPathScreen}
          backgroundImage={HideImage}
          heightPercent={40}
          testID="home.button.hide"
        />
        <HomeCard
          text={t('home.findWaldo')}
          onPress={toGuessPathScreen}
          backgroundImage={MainImage}
          heightPercent={40}
          testID="home.button.guess"
        />
        <HomeCard
          text={t('home.ranking')}
          onPress={toRankingScreen}
          backgroundImage={RankingImage}
          heightPercent={20}
...
