...
    scope: isPrivateScope ? scope : undefined,
  });

  return (
    <>
      <View style={styles.container}>
        <View testID="result.screen.failure" style={styles.result}>
          <Animated.Text
            testID="result.screen.failure.title"
            style={[styles.title, { transform: [{ scale: messageScale }] }]}
          >
            {t('result.failureTitle')}
          </Animated.Text>
...
